Adds old solution's files with basic functionality

--- a/APIAggregator/appsettings.json
+++ b/APIAggregator/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RapidAPI": {
+    "ApiKeyName": "X-RapidAPI-Key",
+    "ApiKeyValue": "f80136b3a3msh776598b1d6afe47p1a67e9jsn62945ea58cba",
+    "WordsAPIUri": "https://wordsapiv1.p.rapidapi.com/words/",
+    "WeatherAPIUri": "https://weatherbit-v1-mashape.p.rapidapi.com/forecast/minutely",
+    "SpotifyAPIUri": "https://spotify23.p.rapidapi.com/search/"
+  }
 }
